# Lab32-task1

./: CMakeLists.txt  main.cpp
